--- a/desafios/modulo 2/d002/estilo/style.css
+++ b/desafios/modulo 2/d002/estilo/style.css
@@ -1,28 +1,43 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
+
+:root{
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Courgette', cursive;
+}
+
 *{
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 }
 
 html, body{
     min-height: 100vh;
-    background-color: gray;
+    background-color: white;
+    font-family: var(--fonte1);
 }
 
 header{
-    background-color: black;
+    background-color: #c98a37;
     color: white;
     text-align: center;
+    font-family: var(--fonte2);
+    font-size: 5em;
 }
 
 header > h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-size: 10vw;
 }
 
 header > p {
     padding-bottom: 50px;
+    font-size: 20px;
 }
 
 a{
@@ -40,6 +55,8 @@ section{
     padding-bottom: 10vh;
     padding-left: 30px;  
     line-height: 2em;
+    font-family: var(--fonte3);
+    font-size: 2.5vw;
 }
 
 section.normal{
@@ -54,7 +71,8 @@ section.imagem{
 
 section.imagem > p{
     background-color: rgba(0, 0, 0, 0.384);
-    width: 300px;
+    display: inline-block;
+    padding: 15px;
 }
 
 footer{
